--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -131,21 +131,17 @@ Haskell Syntax Primer
 x = 3
 
 
+y = 3 + x
+
+
+name = "Keyser Soze"
+
+
 {{content}}
 ```
 ???
 - A Haskell program is made up of definitions
 - The simplest kind are just constants
---
-y = 3 + x
-
-
-{{content}}
---
-name = "Keyser Soze"
-
-
-{{content}}
 --
 addLists ls1 ls2 = ls1 ++ ls2
 
@@ -454,7 +450,6 @@ addWorld(Option("Hello")) // Some(Hello World!)
 class Functor f where
   fmap :: (a -> b) -> f a -> f b
   
-  
 {{content}}
 ```
 
@@ -469,6 +464,7 @@ class Functor f where
 
 data Maybe a = Just a | Nothing deriving (Eq, Show)
 
+
 instance Functor Maybe where
   fmap f (Just x) = Just $ f x
   fmap _ Nothing = Nothing
@@ -480,7 +476,7 @@ instance Functor Maybe where
 - As in the Scala case, we can write a function that is generic in the typeclass instance
 --
 
-addWorld :: Functor f => f [Char] -> f [Char] 
+addWorld :: Functor f => f String -> f String 
 addWorld fs = fmap (++ " World!") fs
 
 addWorld $ Just "Hello" -- Just "Hello World!"
@@ -568,8 +564,16 @@ pure Timeline <*> Nothing <*> Just 5 -- Nothing
 
 Timeline <$> Just "Keyser" <*> Just 5
 
+
+{{content}}
 ???
 - Which is a very neat way to apply function inside of containers or contexts
+- Because of currying this pattern works for any number of arguments and for any `Applicative`
+--
+f <$> x1 <*> x2 <*> ... <*> xn
+
+???
+- If you're familiar with Scalaz's validation, this should look familiar
 - With all this in hand we are ready to start implementing our application
 - Any questions so far?
 
