--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -89,13 +89,13 @@ layout: false
 
 ## How?
 
-We'll build a small server application that:
+We'll build Twitter-grep, a small server-side application that:
 
-- Accepts GET (@twitter-name, grep)
+- Accepts GET (@twitter-name, regex)
 
 - Fetches @twitter-name timeline
 
-- Filters timeline with grep expression
+- Filters timeline with regex expression
 
 - Serves an HTML page with results
 
@@ -105,9 +105,9 @@ We'll build a small server application that:
 - We'll try to build a "real world" application, with all sorts of side effects and things
 - So no Fibonacci
 - The aim is not to be a comprehensive introduction to Haskell, but rather to convey the feeling of programming in Haskell
-- Accepts GET requests with a Twitter user name and a grep-like expression
+- Accepts GET requests with a Twitter user name and a regex-like expression
 - Fetches the user's Twitter timeline via the Twitter API
-- Filters out the tweets that do not match the grep expression
+- Filters out the tweets that do not match the regex expression
 - Produces an HTML page with the resulting tweets
 
 ---
