--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -1304,8 +1304,11 @@ main = do
 When I said no Fibonacci, I lied...
 ???
 
+- Because you can't give an introduction to Haskell without mentioning Fibonacci
 - This concludes our exploration of Haskell
 - I hope that you got some feeling of what it's like to program in Haskell
+- The blend of pure FP with code that can do "real world" stuff is very powerful
+- You can achieve quite a lot this way without losing the elegance that so characteristic of functional programming
 ---
 
 ## Resources
