Styling intro slide

--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -10,10 +10,9 @@
 
 class: center, middle, transition, intro
 
-#  A Taste of Haskell for Scala Programmers
+#  A Taste of Haskell for <br /> Scala Programmers
 
-.leftFloat[Underscore - TODO 2015]
-.rightFloat[Daniel Beskin]
+.caption[Daniel Beskin]
 ---
 
 class: center, middle, transition
